--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.9)
 project(trabalho_grafos)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(trabalho_grafos main.cpp Grafo.cpp Grafo.h No.cpp No.h Aresta.cpp Aresta.h)
+add_executable(trabalho_grafos main.cpp Grafo/Grafo.cpp Grafo/Grafo.h Grafo/No.cpp Grafo/No.h Grafo/Aresta.cpp Grafo/Aresta.h)
